<resources>
    <string name="app_name">AutoServiceLog</string>
    <string name="welcome_title">AutoServiceLog</string>
    <string name="welcome_subtitle">Service history for car owners and mechanics.</string>
    <string name="welcome_body">Log repairs, add worksheet notes, and keep every car service record in one place.</string>
    <string name="login_email">Email and password</string>
    <string name="login_google">Continue with Google</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_anonymous">Continue as guest</string>
    <string name="signup_email">Create account</string>
    <string name="owner_label">For car owners</string>
    <string name="mechanic_label">For mechanics</string>
    <string name="owner_description">Add your cars and view completed worksheets.</string>
    <string name="mechanic_description">Search cars by license plate and start new work.</string>
    <string name="owner_screen_title">My cars</string>
    <string name="add_car">Add car</string>
    <string name="car_plate_label">Plate</string>
    <string name="car_vin_label">VIN</string>
    <string name="car_worksheets_label">Worksheets</string>
    <string name="sample_car_one">Volkswagen Golf</string>
    <string name="sample_car_two">Opel Astra</string>
    <string name="sample_plate_one">SK-1234-AB</string>
    <string name="sample_plate_two">BT-5678-CD</string>
    <string name="sample_vin_one">WVWZZZ1KZ6W000001</string>
    <string name="sample_vin_two">W0L0AHL3560000002</string>
    <string name="sample_worksheets_one">3 worksheets</string>
    <string name="sample_worksheets_two">1 worksheet</string>
    <string name="no_cars_yet">No cars added yet</string>
    <string name="load_cars_failed">Cars could not be loaded</string>
    <string name="car_load_failed">Car could not be loaded</string>
    <plurals name="worksheet_count">
        <item quantity="one">%d worksheet</item>
        <item quantity="other">%d worksheets</item>
    </plurals>
    <string name="mechanic_screen_title">Mechanic</string>
    <string name="search_plate_hint">Search by license plate</string>
    <string name="search">Search</string>
    <string name="search_result_label">Search result</string>
    <string name="search_for_car_hint">Search for a car by license plate</string>
    <string name="enter_license_plate">Enter a license plate</string>
    <string name="search_car_found">Car found</string>
    <string name="car_not_found">No car found for that license plate</string>
    <string name="search_car_failed">Search failed</string>
    <string name="owner_name_label">Owner</string>
    <string name="owner_result">Owner: %1$s</string>
    <string name="sample_owner_name">Aleksandar Petrovski</string>
    <string name="start_work">Start work</string>
    <string name="work_started">Work started</string>
    <string name="start_work_failed">Work could not be started</string>
    <string name="recent_work_label">Recent work</string>
    <string name="sample_recent_work_one">Oil filter replacement</string>
    <string name="sample_recent_work_two">Front brake inspection</string>
    <string name="add_car_screen_title">Add car</string>
    <string name="license_plate">License plate</string>
    <string name="make">Manufacturer</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="vin">VIN</string>
    <string name="color">Color</string>
    <string name="save_car">Save car</string>
    <string name="car_saved">Car saved</string>
    <string name="save_car_failed">Car could not be saved</string>
    <string name="invalid_year">Enter a valid year</string>
    <string name="cancel">Cancel</string>
    <string name="continue_action">Continue</string>
    <string name="car_detail_title">Car details</string>
    <string name="car_info">Car info</string>
    <string name="worksheet_history">Worksheet history</string>
    <string name="license_plate_value">License plate: %1$s</string>
    <string name="vin_value">VIN: %1$s</string>
    <string name="year_value">Year: %1$d</string>
    <string name="color_value">Color: %1$s</string>
    <string name="mechanic_value">Mechanic: %1$s</string>
    <string name="no_worksheets_yet">No worksheets yet</string>
    <string name="no_work_description">No work description</string>
    <string name="mechanic">Mechanic</string>
    <string name="date">Date</string>
    <string name="work_done">Work done</string>
    <string name="photo_attached">Photo attached</string>
    <string name="no_photo">No photo</string>
    <string name="sample_year">2012</string>
    <string name="sample_color">Silver</string>
    <string name="sample_mechanic_one">Mechanic: Stefan</string>
    <string name="sample_mechanic_two">Mechanic: Martin</string>
    <string name="sample_date_one">Date: 06.06.2026</string>
    <string name="sample_date_two">Date: 18.05.2026</string>
    <string name="sample_work_done_one">Changed oil and oil filter. Checked fluid levels.</string>
    <string name="sample_work_done_two">Checked front brakes and cleaned brake area.</string>
    <string name="worksheet_screen_title">Worksheet</string>
    <string name="status_ongoing">Status: Ongoing</string>
    <string name="status_value">Status: %1$s</string>
    <string name="started_sample">Started: 06.06.2026</string>
    <string name="started_value">Started: %1$s</string>
    <string name="finished_value">Finished: %1$s</string>
    <string name="worksheet_load_failed">Worksheet could not be loaded</string>
    <string name="work_description">Work description</string>
    <string name="work_description_hint">Write what was done on the car</string>
    <string name="photo_optional">Photo optional</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_photo">Delete photo</string>
    <string name="selected_photo">Selected photo</string>
    <string name="photo_select_failed">Photo could not be selected</string>
    <string name="save_note">Save</string>
    <string name="work_saved">Work saved</string>
    <string name="work_save_failed">Work could not be saved</string>
    <string name="finish_work">Finish work</string>
    <string name="work_finished">Work finished</string>
    <string name="finish_work_failed">Work could not be finished</string>
    <string name="signup_screen_title">Create account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_type">Account type</string>
    <string name="owner">Owner</string>
    <string name="mechanic_role">Mechanic</string>
    <string name="back_to_login">Back to login</string>
    <string name="account_created_notification">Account has been created</string>
    <string name="login_screen_title">Log in</string>
    <string name="login">Log in</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_failed">Account could not be created</string>
    <string name="auth_fill_all_fields">Fill in all fields</string>
    <string name="auth_passwords_do_not_match">Passwords do not match</string>
    <string name="auth_choose_account_type">Choose an account type</string>
    <string name="auth_unknown_role">Unknown account type</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="google_config_missing">Google login is not configured yet</string>
    <string name="google_account_type_message">Choose how this Google account will be used.</string>
    <string name="facebook_login_failed">Facebook login failed</string>
    <string name="facebook_config_missing">Facebook login is not configured</string>
    <string name="facebook_account_type_message">Choose how this Facebook account will be used.</string>
    <string name="worksheet_detail_title">Worksheet details</string>
    <string name="status_finished">Status: Finished</string>
    <string name="finished_sample">Finished: 06.06.2026</string>
    <string name="photo">Photo</string>
    <string name="photo_placeholder">Photo</string>
    <string name="photo_load_failed">Photo could not be loaded</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="header_separator">|</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="profile_screen_title">Profile</string>
    <string name="profile_name">Name: %1$s</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="profile_role">Account type: %1$s</string>
    <string name="logout">Log out</string>
    <string name="my_jobs">My jobs</string>
    <string name="no_jobs_yet">No jobs yet</string>
    <string name="notification_channel_name">Work updates</string>
    <string name="notification_work_started_title">Work started</string>
    <string name="notification_work_started_body">Work on your car has started.</string>
    <string name="notification_work_started_owner_body">Work on %1$s has started by %2$s.</string>
</resources>
