<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.apetrovski.autoservicelog.ui.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/screen_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_ownerFragment"
            app:destination="@id/ownerFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_mechanicFragment"
            app:destination="@id/mechanicFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.apetrovski.autoservicelog.ui.LoginFragment"
        android:label="@string/login_screen_title"
        tools:layout="@layout/screen_login">
        <action
            android:id="@+id/action_loginFragment_to_ownerFragment"
            app:destination="@id/ownerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_mechanicFragment"
            app:destination="@id/mechanicFragment" />
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.apetrovski.autoservicelog.ui.SignupFragment"
        android:label="@string/signup_screen_title"
        tools:layout="@layout/screen_signup">
        <action
            android:id="@+id/action_signupFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/ownerFragment"
        android:name="com.apetrovski.autoservicelog.ui.OwnerFragment"
        android:label="@string/owner_screen_title"
        tools:layout="@layout/screen_owner">
        <action
            android:id="@+id/action_ownerFragment_to_addCarFragment"
            app:destination="@id/addCarFragment" />
        <action
            android:id="@+id/action_ownerFragment_to_carDetailFragment"
            app:destination="@id/carDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/addCarFragment"
        android:name="com.apetrovski.autoservicelog.ui.AddCarFragment"
        android:label="@string/add_car_screen_title"
        tools:layout="@layout/screen_add_car" />

    <fragment
        android:id="@+id/carDetailFragment"
        android:name="com.apetrovski.autoservicelog.ui.CarDetailFragment"
        android:label="@string/car_detail_title"
        tools:layout="@layout/screen_car_detail">
        <action
            android:id="@+id/action_carDetailFragment_to_worksheetDetailFragment"
            app:destination="@id/worksheetDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/mechanicFragment"
        android:name="com.apetrovski.autoservicelog.ui.MechanicFragment"
        android:label="@string/mechanic_screen_title"
        tools:layout="@layout/screen_mechanic">
        <action
            android:id="@+id/action_mechanicFragment_to_worksheetFragment"
            app:destination="@id/worksheetFragment" />
    </fragment>

    <fragment
        android:id="@+id/worksheetFragment"
        android:name="com.apetrovski.autoservicelog.ui.WorksheetFragment"
        android:label="@string/worksheet_screen_title"
        tools:layout="@layout/screen_worksheet" />

    <fragment
        android:id="@+id/worksheetDetailFragment"
        android:name="com.apetrovski.autoservicelog.ui.WorksheetDetailFragment"
        android:label="@string/worksheet_detail_title"
        tools:layout="@layout/screen_worksheet_detail" />
</navigation>
